# iscc-sct

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  space.yml  zensical.toml
.github/workflows/: ci.yml  docs.yml  huggingface.yml  release.yml  test.yml  tests.yml
docs/: CNAME  conventions.md  index.md  llms.txt  offsets.md
docs/explanation/: how-it-works.md
docs/howto/: command-line.md  compare-texts.md  configuration.md  granular-features.md
docs/includes/: abbreviations.md
docs/javascripts/: copilot.js  copypage.js
docs/overrides/: main.html
docs/reference/: api.md  for-coding-agents.md
docs/stylesheets/: copilot.css  extra.css
docs/tutorials/: getting-started.md
iscc_sct/: __init__.py  cli.py  code_semantic_text.py  demo.py  dev.py  doctor.py  main.py  models.py  models_config.py  options.py  samples.yml  utils.py
scripts/: gen_llms_full.py
tests/: benchmark.py  chunking_vectors.json  conftest.py  de.txt  en.txt  freeze_tokenizer.py  test_chunking_vectors.py  test_cli.py  test_demo.py  test_doctor.py  test_gen_llms_full.py  test_install.py  test_iscc_sct.py  test_main.py  test_models.py  test_models_config.py  test_options.py  test_prompt_handling.py  test_prompt_integration.py  test_readme.py  test_utils.py  visualize.py
