[project]
name = "iscc-sct"
version = "0.1.5"
description = "ISCC - Semantic Code Text"
authors = [
    {name = "Titusz", email = "tp@piscc.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["iscc", "text similarity", "cross lingual", "semantic similarity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "semantic-text-splitter",
    "onnxruntime",
    "loguru",
    "blake3",
    "platformdirs",
    "tokenizers",
    "pydantic-settings",
    "charset-normalizer",
    "filelock",
    "numpy",
    "pybase64",
    "certifi",
    "pyyaml",
    "pydantic",
    "typer",
    "niquests",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]
demo = ["gradio"]

[dependency-groups]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "poethepoet",
    "ruff",
    "mdformat-gfm",
    "mdformat-gfm-alerts",
    "mdformat-frontmatter",
    "gradio",
    "radon",
    "xenon",
    "datasets",
]

[project.urls]
Homepage = "https://iscc.codes"
Repository = "https://github.com/iscc/iscc-sct"
Documentation = "https://github.com/iscc/iscc-sct"
Changelog = "https://github.com/iscc/iscc-sct/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/iscc/iscc-sct/issues"
Twitter = "https://twitter.com/iscc_foundation"
Donate = "https://iscc.foundation/support"

[project.scripts]
iscc-sct = "iscc_sct.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
omit = ["iscc_sct/dev.py", "tests/", "iscc_sct/demo.py"]

[tool.poe.tasks]
format-code = { cmd = "ruff format", help = "Code style formating with ruff" }
format-markdown = { cmd = "mdformat --wrap 100 --end-of-line lf README.md", help = "Markdown formating with mdformat" }
format-yml = { script = "iscc_sct.dev:format_yml", help = "Format YML files"}
convert-lf = { script = "iscc_sct.dev:convert_lf", help = "Convert line endings to LF"}
test = { cmd = "pytest --cov=iscc_sct --cov-fail-under=100", help = "Run tests with coverage" }
check-complexity = { shell = "radon cc iscc_sct -s -a --total-average && xenon iscc_sct --max-absolute C --max-modules B --max-average A", help = "Show complexity report then enforce thresholds (fail on >C)" }
update-dependencies = { cmd = "uv sync --upgrade", help = "Update dependencies" }
all = ["format-code", "format-markdown", "format-yml", "convert-lf", "check-complexity", "test"]
update = ["update-dependencies", "all"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
